--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "bcryptjs": "^2.4.3",
     "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.10"
+    "sqlite3": "^5.1.1",
+    "typeorm": "^0.2.10"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
