--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "bcryptjs": "^2.4.3",
     "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
